--- a/login_form.html
+++ b/login_form.html
@@ -6,8 +6,24 @@
     <title>Login form</title>
 </head>
 <body>
+    <br>
     <center>
-        <img src = "Images/iconoUser.png"width="100">
+        <img src = "Images/iconoUser.png"width="100"><br>
+    </center>
+
+    <form name="Login-form" action=" " method="post">
+        <table border="0" align="center">
+            <tr><td><label>Username:</label></td></tr>
+            <tr><td><input type="email" required></td></tr>
+            <tr><td><label>Pasword:</label></td></tr>
+            <tr><td><input type="password" required></td></tr>
+            <tr><td align="center"><button>Sing in</button></td>></td></tr>
+        </table>
+    </form>
+    <center>
+        <br><a href="#">Sing up</a>
+        <br><a href="#">Forgot Pasword</a>
+        <br><a href="#">Terms and Conditions</a>
     </center>
 </body>
 </html>
