tablas.html completado

--- a/tables.html
+++ b/tables.html
@@ -73,5 +73,214 @@
             <td><img src = "Images/imagen.png"width="50"></td>
         </tr>        
     </table>
+
+    <table border="2"class="table">
+        <tr>
+            <td colspan="4"><center><img src="Images/bocadillo.png"width="50"> Hit me up</center></td>
+        </tr>
+        <tr>
+            <td rowspan="2"><img src="Images/hombre.png"width="50"></td>
+            <td><b>Emir Çelik</b></td>
+            <td align="right"><b>8:20 a.m.</b></td>
+            <td rowspan="2"><img src="Images/campanabase.png"width="50"></td>
+        </tr>
+        <tr>
+            <td>Last menssage</td>
+            <td align="right"><img src="Images/numero-1.png"width="20"></td>
+        </tr>
+        <tr>
+            <td rowspan="2"><img src="Images/mujer.png"width="50"></td>
+            <td><b>Aylin Yildiz</b></td>
+            <td align="right"><b>8:15 a.m.</b></td>
+            <td rowspan="2"><img src="Images/campananotificacion.png"width="60"></td>
+        </tr>
+        <tr>
+            <td>Last menssage</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td rowspan="2"><img src="Images/hombre.png"width="50"></td>
+            <td><b>Burak Arslan</b></td>
+            <td align="right"><b>8:20 a.m.</b></td>
+            <td rowspan="2"><img src="Images/campananotificacion.png"width="60"></td>
+        </tr>
+        </tr>
+        <tr>
+            <td>Last menssage</td>
+            <td align="right"><img src="Images/numero-1.png"width="20"></td>
+        </tr>
+        <tr>
+            <td rowspan="2"><img src="Images/mujer.png"width="50"></td>
+            <td><b>Elif Demir</b></td>
+            <td align="right"><b>7:20 a.m.</b></td>
+            <td rowspan="2"> <img src="Images/campanabase.png"width="50"></td>
+        </tr>
+        <tr>
+            <td>Last menssage</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td rowspan="2"><img src="Images/mujer.png"width="50"></td>
+            <td><b>Zaynep Kaya</b></td>
+            <td align="right"><b>7:00 a.m.</b></td>
+            <td rowspan="2"><img src="Images/campananotificacion.png"width="60"></td>
+        </tr>
+        <tr>
+            <td>Last menssage</td>
+            <td align="right"><img src="Images/numero-1.png"width="20"></td>
+        </tr>
+        <tr>
+            <td rowspan="2"><img src="Images/hombre.png"width="50"></td>
+            <td><b>Can Özkan</b></td>
+            <td align="right"><b>6:30 a.m.</b></td>
+            <td rowspan="2"> <img src="Images/campanabase.png"width="50"></td>
+        </tr>
+        <tr>
+            <td>Last menssage</td>
+            <td></td>
+        </tr>
+        
+    </table>
+
+    <table border="1" class="table">
+        <tr>
+            <th colspan="7"><center>User List</center></th>
+        </tr>
+        <tr>
+            <th>ID</th>
+            <th>FirstName</th>
+            <th>LastName</th>
+            <th>E-mail</th>
+            <th>Address</th>
+            <th>Mobile</th>
+            <th>Photo</th>
+        </tr>
+        <tr>
+            <td><center>1</center></td>
+            <td>Omar</td>
+            <td>Al-Farsi</td>
+            <td>omar@mail.com</td>
+            <td>Al-Olaya Street,<br> Tower Center,<br> Floor 5</td>
+            <td>+6235642356</td>
+            <td><img src = "Images/imagen.png"width="50"></td>
+        </tr>
+        <tr>
+            <td><center>2</center></td>
+            <td>Layla Ibn</td>
+            <td>Zayed</td>
+            <td>layla@mail.com</td>
+            <td>Sheikh Zayed,<br> Road, Business <br> Bay</td>
+            <td>+6235444356</td>
+            <td><img src = "Images/imagen.png"width="50"></td>
+        </tr>
+        <tr>
+            <td><center>3</center></td>
+            <td>Khalid</td>
+            <td>Al-Mansouri</td>
+            <td>khalid@mail.com</td>
+            <td>Avenue Hassan II.<br>Quartier Maarif<br></td>
+            <td>+6236542356</td>
+            <td><img src = "Images/imagen.png"width="50"></td>
+        </tr>
+        <tr>
+            <td><center>4</center></td>
+            <td>Youssef</td>
+            <td>Ben khalifa</td>
+            <td>youssef@mail.com</td>
+            <td>West Bay, The<br> Pearl-Qatar</td>
+            <td>+6235642389</td>
+            <td><img src = "Images/imagen.png"width="50"></td>
+        </tr>
+    </table>
+
+    <table border="2" class="table">
+        <tr>
+            <th rowspan="6">U<br>s<br>e<br>r<br>s<br> <br>f<br>r<br>o<br>m<br> <br>T<br>u<br>r<br>k<br>e<br>y</th>
+            <th colspan="7"><center>User List</center></th>
+        </tr>
+        <tr>
+            <th>ID</th>
+            <th>FirstName</th>
+            <th>LastName</th>
+            <th>E-mail</th>
+            <th>Address</th>
+            <th>Mobile</th>
+            <th>Photo</th>
+        </tr>
+        <tr>
+            <td><center>1</center></td>
+            <td>Omar</td>
+            <td>Al-Farsi</td>
+            <td>omar@mail.com</td>
+            <td>Al-Olaya Street,<br> Tower Center,<br> Floor 5</td>
+            <td>+6235642356</td>
+            <td><img src = "Images/imagen.png"width="50"></td>
+        </tr>
+        <tr>
+            <td><center>2</center></td>
+            <td>Layla Ibn</td>
+            <td>Zayed</td>
+            <td>layla@mail.com</td>
+            <td>Sheikh Zayed,<br> Road, Business <br> Bay</td>
+            <td>+6235444356</td>
+            <td><img src = "Images/imagen.png"width="50"></td>
+        </tr>
+        <tr>
+            <td><center>3</center></td>
+            <td>Khalid</td>
+            <td>Al-Mansouri</td>
+            <td>khalid@mail.com</td>
+            <td>Avenue Hassan II.<br>Quartier Maarif<br></td>
+            <td>+6236542356</td>
+            <td><img src = "Images/imagen.png"width="50"></td>
+        </tr>
+        <tr>
+            <td><center>4</center></td>
+            <td>Youssef</td>
+            <td>Ben khalifa</td>
+            <td>youssef@mail.com</td>
+            <td>West Bay, The<br> Pearl-Qatar</td>
+            <td>+6235642389</td>
+            <td><img src = "Images/imagen.png"width="50"></td>
+        </tr>
+    </table>
+
+    <table border="2" class="table">
+        <tr>
+            <th colspan="2"><center>Cars</center></th>
+        </tr>
+        <tr>
+            <th><center>Brand</center></th>
+            <th><center>Reference</center></th>
+        </tr>
+        <tr>
+            <td rowspan="5">Mazda</td>
+            <td>CX-3</td>
+        </tr>
+        <tr>
+            <td>CX-5</td>
+        </tr>
+        <tr>
+            <td>CX-60</td>
+        </tr>
+        <tr>
+            <td>323</td>
+        </tr>
+        <tr>
+            <td>2</td>
+        </tr>
+        <tr>
+            <td rowspan="2">Renault</td>
+            <td>Sandero</td>
+        </tr>
+        <tr>
+            <td>Kwid</td>
+        </tr>
+        <tr>
+            <td>Chervolet</td>
+            <td>Aveo</td>
+        </tr>
+    </table>
+    
 </body>
 </html>
